Tue Jul 17 18:21:25 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Process.h: Expanded the documentation for creation_flags().

Tue Jul 17 18:07:01 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/os_include/os_intrin.h: Corrected the prototypes for
          InterlockedExchange[Add] on VC7.1. Thanks to Juraj Ivancic
          for this fix.

Tue Jul 17 10:20:24 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Proactor/test_proactor2.cpp:
        * examples/Reactor/Proactor/test_proactor3.cpp:
          Fixed some compile warnings/errors

Tue Jul 17 08:36:24 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/POSIX_Proactor.h:
        * ace/SUN_Proactor.h:
          Doxygen updates

        * ace/Service_Gestalt.cpp:
          Layout changes

Tue Jul 17 04:03:24 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * Kokyu/Dispatch_Deferrer.cpp:
        * ace/FoxReactor/FoxReactor.h:
        * apps/JAWS/clients/Caching/http_client.cpp:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/crit.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/dll.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/file.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/nterrors.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/sem.h:
        * apps/JAWS/clients/WebSTONE/src/parse_file_list.c:
        * apps/JAWS/clients/WebSTONE/src/rexec.c:
        * apps/JAWS/clients/WebSTONE/src/sysdep.h:
        * apps/JAWS/clients/WebSTONE/src/sysdep.c:
        * apps/JAWS/clients/WebSTONE/src/webclient.c:
        * apps/JAWS/stress_testing/http_tester.cpp:
        * apps/JAWS/stress_testing/util.cpp:
        * apps/JAWS2/JAWS/Parse_Headers.cpp:
        * apps/JAWS3/bench/rqfiles.cpp:
        * apps/JAWS3/jaws3/Cached_Allocator_T.cpp:
        * contrib/FaCE/CE_Screen_Output.cpp:
        * contrib/FaCE/FaCE.cpp:
        * contrib/FaCE/FaCE_OS.h: